# funasr-android

./: README.md
asr_android_app/: settings.gradle
asr_android_app/app/: build.gradle  proguard-rules.pro
asr_android_app/app/src/androidTest/java/com/fawai/asr/: ExampleInstrumentedTest.java
asr_android_app/app/src/main/: AndroidManifest.xml
asr_android_app/app/src/main/java/com/fawai/asr/: ASRWebSocketClient.java  MainActivity.java  OnnxInter.java
asr_android_app/app/src/main/res/layout/: activity_main.xml
asr_android_app/app/src/main/res/values/: strings.xml
asr_android_app/app/src/test/java/com/fawai/asr/: ExampleUnitTest.java
asr_engine/: .gitignore  run_server_2pass.sh
asr_engine/androidlib/: CMakeLists.txt  CMakeLists1.txt  build-android.sh  fawasr.cc  fawasr2pass.cc  fawasroff.cc
asr_engine/onnxruntime/: readme.md
asr_engine/onnxruntime/include/: funasrruntime.h
asr_engine/onnxruntime/src/: bias-lm.h  itn-processor.h  paraformer.h  precomp.h  wfst-decoder.h
asr_engine/websocket/: CMakeLists.txt  readme.md  readme_zh.md  websocket-server-2pass.cpp  websocket-server.cpp
